--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/arul21/PairProject#readme",
   "dependencies": {
     "ejs": "^2.6.1",
+    "ejs-lint": "^0.3.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "pg": "^7.4.3",
