--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "PairProject",
+  "name": "bulutangkis",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.3",
+    "@sendgrid/mail": "^6.3.1",
+    "bcryptjs": "^2.4.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "pg": "^7.4.3",
-    "pg-hstore": "^2.3.2",
     "sequelize": "^4.39.0"
   }
 }
